用另外一種方式實做了page name的顯示

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>SampleApp2</title>
+    <% if @page_name %>
+      <title><%= "#{@page_name} | Ruby on Rails Tutorial Sample App" %></title>
+    <% else %>
+      <title>Sample App</title>
+    <% end %>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
